src/test/ui/associated-types/associated-types-overridden-binding.stderr
error[E0284]: type annotations needed
  --> $DIR/associated-types-overridden-binding.rs:4:12
   |
LL | trait Foo: Iterator<Item = i32> {}
   | ------------------------------- required by `Foo`
LL | trait Bar: Foo<Item = u32> {}
   |            ^^^^^^^^^^^^^^^ cannot infer type for type parameter `Self`
   |
   = note: cannot satisfy `<Self as std::iter::Iterator>::Item == i32`

error[E0284]: type annotations needed
  --> $DIR/associated-types-overridden-binding.rs:7:21
   |
LL | trait I32Iterator = Iterator<Item = i32>;
   | ----------------------------------------- required by `I32Iterator`
LL | trait U32Iterator = I32Iterator<Item = u32>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `Self`
   |
   = note: cannot satisfy `<Self as std::iter::Iterator>::Item == i32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0284`.
